[package]
name = "cargo-recent"
version = "0.1.0"
edition = "2024"
description = "A tool to show and operate on recently changed crates"
authors = ["Daisuke Ito <daisuke.ito.cs@gmail.com>"]
license = "MIT"
repository = "https://github.com/poi2/cargo-recent"
readme = "README.md"
keywords = ["cargo", "subcommand", "workspace", "development", "tool"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[features]
dbg = []

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
regex = "1.9"
walkdir = "2.3"

[dev-dependencies]
tempfile = "3.8"
